Ignore form action URL when determine if a credential should be autofilled.

The Credential Manager API saves passwords without action like Android does. The former credentials should be treated as the latter ones.
As a side effect the CL fixes an apparently buggy condition for the change password forms coming from r335019. Before: Android credentials were autofilled into the change password forms. Now: the are offered in the drop-down like normal web credentials.

BUG=725495

Review-Url: https://codereview.chromium.org/2900983002
Cr-Commit-Position: refs/heads/master@{#474284}

Former-commit-id: 40f676517d2d8b840c41eb67a7f874a154e7f54a